# -PROMETHEUS-AIS-Competition

./: .gitattributes  .gitignore  BUILD_TRUTH.md  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml  live-site-verify.yml  operator-console-validate.yml  pages.yml  static.yml
competition/: DEMO_SCRIPT.md  JUDGE_BRIEF.md  QUICKSTART.md
competition/interface/: index.html
docs/: .republish-20260721  404.html  PAGES_CONVERGENCE_PROOF.txt  PAGES_CONVERGENCE_TRIGGER_20260721.txt  REPAIR_RELEASE_20260721.txt  RESTORE_KNOWN_GOOD_20260721.txt  deployment-status.json  deployment-trigger.txt  index.html  manifest.webmanifest  operator-console-release.json
docs/assets/: app.js  case-study.css  case-study.js  demo.css  elite-demo.css  elite-demo.js  hardening.css  observatory.css  observatory.js  operator-console.css  serverforge-case-study.css  serverforge-case-study.js  styles.css  unified.css
docs/data/: case-study.json  demo.json  elite-demo-live-release.json  serverforge-publication-envelope.json
docs/documentation/: COMPETITION_READINESS.md  DEMO_SCRIPT.md  EDEN_SERVERFORGE_CASE_STUDY.md  FINAL_AUDIT.md  JUDGE_BRIEF.md  OPERATOR_CONSOLE_TECHNICAL_SPEC.md  QUICKSTART.md  SUBMISSION_KIT.md
docs/genomes/: CAPABILITY_GENOME.json  CAPABILITY_GENOME_REUSE.json
docs/proofgrid/: CANDIDATES.json  CAPABILITY_GENOME_REUSE.json  EVENTS.jsonl  FINAL_RECEIPT.json  HYDRA_REPAIR_RECEIPT.json  MISSION.json  SECA_DECISION.json  TEST_RESULTS.json
docs/serverforge/: README.md  (+1 more)
tests/: test_competition_runtime.py  test_demo.py
(+3 files in other folders)
